# bucket-compression

./: Cargo.toml  README.md
benches/: perf.rs
results/: compression.sorted-400.txt  compression_large.old.txt  performance.sorted.txt  sizes.txt
src/: flate.rs  fpzip.rs  lib.rs  main.rs  stats.rs  tsz_f64.rs  zfp.rs
